fix:font size on iphone 5

--- a/src/pages/homepage/home-page.css
+++ b/src/pages/homepage/home-page.css
@@ -162,10 +162,12 @@
   .div1 {
     margin-top: 10px;
   }
+
   .div1 h1 {
-    font-size: 1rem;
+    font-size: 1.1rem;
     padding-bottom: 0;
   }
+
   .div1 p {
     font-size: 0.8rem;
     line-height: 15px;
